tutorial/examples/app-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-deployment-demo
spec:
  selector:
    app: app-deployment-demo
  ports:
  - port: 80
    targetPort: 8080
