tutorial/examples/app-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-deployment-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /app-deployment-demo(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: app-deployment-demo
            port:
              number: 80
